--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>My Third Github repo</title>
 </head>
 <body>
-    
+    <h1>I can ush to githun</h1>
+    <h2>Mama i can code now</h2>
+    <h3>New code changed to orange</h3>
+    <p>More paragraph</p>
+    <p>I am coding coding and coding</p>
 </body>
 </html>
