--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can ush to githun</h1>
+    <h1>I can ush to github.com</h1>
     <h2>Mama i can code now</h2>
     <h3>New code changed to orange</h3>
     <p>More paragraph</p>
