--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <p>More paragraph</p>
     <p>I am coding coding and coding</p>
     <p><b>Ami new css style korlam</b></p>
+    <img src="Tom cruis.jpg" alt="">
+    <img src="ariana.jpg" alt="">
 </body>
 </html>
